# protobuf_inspector

./: CMakeLists.txt  README.md  build.sh
proto/: sample.proto
src/: CMakeLists.txt  static_pb_message_clear_and_op.cc  static_pb_message_clear_and_op_with_arena.cc
